GDK W32: Support UTF-16 surrogate pairs passed via VK_PACKET

This is, essentially, a piece of g_utf16_to_ucs4() built into GDK
W32 keyboard message processing.

https://bugzilla.gnome.org/show_bug.cgi?id=769126